--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,34 @@
 { 
-   "format_version" : 1,
-   "header" : {
-      "description" : "本をデカくします。",
-      "name" : "EditerBook",
-      "uuid" : "fe8e66b3-5f78-4b90-8306-cc9be83bbfa8", 
-      "version" : [ 1,0,0 ] 
+   "format_version": 1,
+   "header": {
+      "description": "本をデカくします。",
+      "name": "EditerBook",
+      "uuid": "fe8e66b3-5f78-4b90-8306-cc9be83bbfa8", 
+      "version": [ 1, 0, 0 ] 
    }, 
-   "modules" : [
+   "modules": [
       { 
-         "description" : "本をデカくします。",
-         "type" : "resources",
-         "uuid" : "4a6633ae-c575-4461-b9a5-5b7616ee010b",
-         "version" : [ 1,0,0 ]
+         "description": "本をデカくします。",
+         "type": "resources",
+         "uuid": "4a6633ae-c575-4461-b9a5-5b7616ee010b",
+         "version": [ 1, 0, 0 ]
+      }
+   ],
+   "subpacks": [
+      {
+         "folder_name": "x1",
+         "name": "320 x 200 (Default)",
+         "memory_tier": 0
+      },
+      {
+         "folder_name": "x1_5",
+         "name": "480 x 300 (x1.5)",
+         "memory_tier": 0
+      },
+      {
+         "folder_name": "x2",
+         "name": "640 x 400 (x2)",
+         "memory_tier": 0
       }
    ]
 }
